# jumpserver_ssh_mcp

./: .gitignore  README.md  pyproject.toml
config/: example.yaml  full-example.yaml
docs/install/: agent.md  codex.md  kimi-cli.md  opencode.md
docs/matchers/: guide.md  schema.json  troubleshooting.md
skills/jumpserver-agent-skill/: SKILL.md
skills/jumpserver-agent-skill/agents/: openai.yaml
skills/jumpserver-agent-skill/references/: mcp-client-config.md  onboard-gateway.md  profile-authoring.md
src/ssh_assist_mcp/: __init__.py  audit.py  cli.py  config.py  errors.py  gateway.py  jumpserver_accounts.py  matchers.py  paths.py  result.py  safety.py  server.py  sessions.py  ssh.py
src/ssh_assist_mcp/resources/docs/matchers/: example.json  guide.md  schema.json  troubleshooting.md
src/ssh_assist_mcp/resources/matchers/reference/: qmzy-asset-list-id.json  ttyuyin-opt-account.json
tests/: test_audit.py  test_config.py  test_file_transfer.py  test_jumpserver_account_selection.py  test_matchers.py  test_owner_sessions.py  test_package_resources.py  test_packaging.py  test_server_matchers.py  test_ssh_gateway_config.py  test_timeouts.py
